Code cleanup based on FindBugs report